# api-s3-certidoes

./: files.csv  main.py  pyproject.toml
models/: certidoes.py
retorno-swagger-test/: post_response_1722212489152.json  response_1722212967715.json
routes/: routes.py
utils/: file_utils.py  s3_utils.py
